--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <a href="https://2002kani.github.io/CodeSnippetManager/"><img src="Bilder/Bildschirmfoto 2024-12-09 um 15.25.09.png"></a>
                 <div class="main-row">
                     <div class="row-text">
-                        <h4> Text-To-Voice </h4>
+                        <h4> Code Snippet Manager </h4>
                     </div>
                     <div class="live-button">
                         <button> <a href="https://2002kani.github.io/CodeSnippetManager/">Live Demo</a> </button>
@@ -100,7 +100,7 @@
                         <button><a href="https://github.com/2002kani/CodeSnippetManager"> Github </a></button>
                     </div>
                 </div>
-                <p> Snippet Manager in welchen man Ordner erstellen und seine Code Snippets rein pasten kann. </p>
+                <p> Erstelle Ordner und paste Code Snippets hinein um diese einfacher wiederzuverwenden. </p>
             </div>
             <div class="row">
                 <a href="https://2002kani.github.io/mytrack/"><img src="Bilder/Bildschirmfoto 2024-11-30 um 11.50.40.png"></a>
