--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
- 
+
 <body>
     <header class="header">
         <a href="#home" class="logo"> Portfolio.
@@ -59,9 +59,9 @@
                 <article class="übermich-content">
                     <div class="content active" id="skills">
                       <h4> Web Development </h4>
-                      <p> <i class='bx bxl-html5' ></i> HTML | <i class='bx bxl-css3' ></i> CSS | <i class='bx bxl-javascript'></i> JavaScript </p> <br>
+                      <p> <i class='bx bxl-html5' ></i> HTML | <i class='bx bxl-css3' ></i> CSS | <i class='bx bxl-javascript'></i> JavaScript | <i class='bx bxl-react'></i> React.js | <i class='bx bxl-nodejs'></i> node.js </p> <br>
                       <h4> Weitere Erfahrungen in </h4>
-                      <p> <i class='bx bxl-postgresql' ></i> SQL | <i class='bx bxl-java' ></i> Java | <i class='bx bxl-github' ></i> Github</p>
+                      <p> <i class='bx bxl-postgresql' ></i> SQL | <i class='bx bxl-java' ></i> Java | <i class='bx bxl-git' ></i> Git | <i class='bx bxl-github' ></i> Github | <i class='bx bxl-firebase' ></i> firebase </p>
                     </div>
                     <div class="content" id="ausbildung">
                       <h4> Ausbildung </h4>
@@ -91,7 +91,7 @@
                 <a href="https://2002kani.github.io/CodeSnippetManager/"><img src="Bilder/Bildschirmfoto 2024-12-09 um 15.25.09.png"></a>
                 <div class="main-row">
                     <div class="row-text">
-                        <h4> Code Snippet Manager </h4>
+                        <h4> Snippet Manager </h4>
                     </div>
                     <div class="live-button">
                         <button> <a href="https://2002kani.github.io/CodeSnippetManager/">Live Demo</a> </button>
@@ -100,8 +100,25 @@
                         <button><a href="https://github.com/2002kani/CodeSnippetManager"> Github </a></button>
                     </div>
                 </div>
-                <p> Erstelle Ordner und paste Code Snippets hinein um diese einfacher wiederzuverwenden. </p>
+                <p> Snippet Manager in welchen man Ordner erstellen- und Code Snippet rein pasten kann. </p>
             </div>
+
+            <div class="row">
+                <a href="https://2002kani.github.io/Netflix-Clone/"><img src="Bilder/Bildschirmfoto 2024-12-27 um 23.26.50.png"></a>
+                <div class="main-row">
+                    <div class="row-text">
+                        <h4> Netflix Kopie </h4>
+                    </div>
+                    <div class="live-button">
+                        <button> <a href="https://2002kani.github.io/Netflix-Clone/">Live Demo</a> </button>
+                    </div>
+                    <div class="github-button">
+                        <button><a href="https://github.com/2002kani/Netflix-Clone"> Github </a></button>
+                    </div>
+                </div>
+                <p> React implementierter Netflix Klon mit tmdb API und firebase Login page</p>
+            </div>
+
             <div class="row">
                 <a href="https://2002kani.github.io/mytrack/"><img src="Bilder/Bildschirmfoto 2024-11-30 um 11.50.40.png"></a>
                 <div class="main-row">
@@ -148,22 +165,6 @@
                     </div>
                 </div>
                 <p> Kreatives Piano-Formular, bei dem man anstelle des Passworts etwas spielen muss. </p>
-            </div>
-
-            <div class="row">
-                <a href="https://2002kani.github.io/Waehrungsrechner/"><img src="Bilder/Bildschirmfoto 2024-07-30 um 15.43.37.png"></a>
-                <div class="main-row">
-                    <div class="row-text">
-                        <h4> Währungsrechner </h4>
-                    </div>
-                    <div class="live-button">
-                        <button> <a href="https://2002kani.github.io/Waehrungsrechner/">Live Demo</a> </button>
-                    </div>
-                    <div class="github-button">
-                        <button><a href="https://github.com/2002kani/Waehrungsrechner"> Github </a></button>
-                    </div>
-                </div>
-                <p> Simpler Währungsrechner mithilfe einer API entwickelt. Rechnet jeweiligen Betrag um. </p>
             </div>
 
             <div class="row">
@@ -235,6 +236,10 @@
     </section>
 
 
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="index.js"></script>
+</body>
+</html>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="index.js"></script>
 </body>
